--- a/CGExamples/WebFolder/index.waPage/liveMessages.waComponent/liveMessages.css
+++ b/CGExamples/WebFolder/index.waPage/liveMessages.waComponent/liveMessages.css
@@ -3,11 +3,61 @@
 	Changes to this CSS file might be lost when it is regenerated.
 */
 
+#{id}button5 {
+	 width: 185px;
+	 height: 42px;
+	 top: 532px;
+	 left: 156px;
+	
+	 position: absolute;
+	 
+}
+
+#{id}button4 {
+	 width: 150px;
+	 height: 50px;
+	 top: 657px;
+	 left: 587px;
+	
+	 position: absolute;
+	 
+}
+
+#{id}button3 {
+	 width: 150px;
+	 height: 50px;
+	 top: 658px;
+	 left: 405px;
+	
+	 position: absolute;
+	 
+}
+
+#{id}button2 {
+	 width: 150px;
+	 height: 50px;
+	 top: 658px;
+	 left: 222px;
+	
+	 position: absolute;
+	 
+}
+
+#{id}button1 {
+	 width: 150px;
+	 height: 50px;
+	 top: 658px;
+	 left: 33px;
+	
+	 position: absolute;
+	 
+}
+
 #{id}richText5 {
 	 height: 145px;
-	 top: 335px;
-	 left: 23px;
-	 right: 21px;
+	 top: 375px;
+	 left: 19px;
+	 right: 25px;
 	
 	 position: absolute;
 	 font-size: 21px;
@@ -20,9 +70,9 @@
 
 #{id}richText4 {
 	 height: 66px;
-	 top: 260px;
+	 top: 301px;
 	 left: 20px;
-	 right: 20px;
+	 right: 22px;
 	
 	 position: absolute;
 	 font-size: 21px;
@@ -48,7 +98,7 @@
 }
 
 #{id}richText2 {
-	 height: 112px;
+	 height: 139px;
 	 top: 145px;
 	 left: 20px;
 	 right: 266px;
