--- a/CGExamples/WebFolder/index.waPage/styles/test.css
+++ b/CGExamples/WebFolder/index.waPage/styles/test.css
@@ -3,6 +3,16 @@
 	Changes to this CSS file might be lost when it is regenerated.
 */
 
+#login1 {
+	 width: 185px;
+	 height: 88px;
+	 top: 5px;
+	 right: 8px;
+	
+	 position: absolute;
+	 
+}
+
 #richText1 {
 	 width: 165px;
 	 height: 22px;
